--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 <label for="item-calories">Calories</label>
                             </div>
 
-                            <button class="add-btn btn btn-blue darken-3"><i class="fa fa-plus"></i> Add Meal</button>
+                            <button id="add" class="add-btn btn btn-blue darken-3"><i class="fa fa-plus"></i> Add Meal</button>
 
                         </div>
                     </form>
