--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                 <span class="total-calories">0</span>
             </h3>
 
-            <ul class="collection" id="item-list"></ul>
+            <ul class="collection" id="item-list">
+                
+            </ul>
 
             
         </div>
